<resources>
    <string name="app_name">Home Budget</string>
    <string name="app_version">3.23-04/10/2020</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_category">activityCategory</string>
    <string name="title_activity_category_item">activity_category_item</string>
    <string name="title_activity_subcategory">activitySubCategory</string>
    <string name="title_activity_subcategory_item">activity_subcategory_item</string>
    <string name="title_activity_transaction_item">activity_transaction_item</string>
    <string name="android_studio">Android Studio</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="title_activity_planning">activityPlanning</string>
    <string name="title_activity_planning_item">activityPlanningItem</string>
    <string name="budget_header_monthly_expenses">MONTHLY EXPENSES</string>
    <string name="budget_header_monthly_income">MONTHLY INCOME</string>
    <string name="budget_header_extra_expenses">EXTRA EXPENSES</string>
    <string name="budget_header_extra_income">EXTRA INCOME</string>
    <string name="budget_header_unplanned_expenses">UNPLANNED EXPENSES</string>
    <string name="budget_header_unplanned_income">UNPLANNED INCOME</string>
    <string name="budget_header_annual_expenses">ANNUAL EXPENSES</string>
    <string name="budget_header_annual_income">ANNUAL INCOME</string>
    <string name="DayCaption">Day: %s</string>
    <string name="DaysCaption">Days: %s</string>
    <string name="DayAndMonth">Day: %s, Month: %s</string>
    <string name="pickText">pick</string>
    <string name="dateEndOfTime">31/12/2099</string>
    <string name="AmountZero">0.00</string>
    <string name="captionDate">Date</string>
    <string name="captionOk">OK</string>
    <string name="captionDelete">Delete</string>
    <string name="captionCreatePlanned">Create Planned</string>
    <string name="captionDescription">Description</string>
    <string name="captionAmount">Amount</string>
    <string name="captionComments">Comments</string>
    <string name="captionCategory">Category</string>
    <string name="captionBudgetPeriod">Budget Period</string>
    <string name="cdBtnStar">btn_star</string>
    <string name="captionBudgetGroupHeading">BudgetGroupHeading</string>
    <string name="captionBudgetSummary">£100.00/£55.00/£45.00</string>
    <string name="captionChildItem">Hello World</string>
    <string name="captionLongTermSavings">Long Term Savings</string>
    <string name="captionCategoryName">Category Name</string>
    <string name="captionEdit">Edit</string>
    <string name="cdEdit">Edit</string>
    <string name="captionSubCategoryName">Sub Category Name</string>
    <string name="captionPlannedType">PlannedType</string>
    <string name="captionPlannedName">PlannedName</string>
    <string name="captionBankAccount">Bank Account</string>
    <string name="captionPlanned">Planned</string>
    <string name="captionStartDate">StartDate</string>
    <string name="captionEndDate">EndDate</string>
    <string name="captionMatchingType">MatchingType</string>
    <string name="captionMatchingDescription">MatchingDescription</string>
    <string name="captionMatchingAmount">MatchingAmount</string>
    <string name="cdNone">none</string>
    <string name="captionBudget">Budget</string>
    <string name="captionBudgetTitle">Feb / 2018</string>
    <string name="captionBudgetSubTitle">£2000.00 / £1500.00 / £500.00</string>
    <string name="captionPlanning">Planning</string>
    <string name="celltx_txfilename">celltx_TxFilename</string>
    <string name="celltx_txlineno">celltx_TxLineNo</string>
    <string name="celltx_txadded">celltx_TxAdded</string>
    <string name="celltx_txseqno">celltx_TxSeqNo</string>
    <string name="celltx_txdate">celltx_TxDate</string>
    <string name="celltx_txtype">celltx_TxType</string>
    <string name="celltx_budget">celltx_Budget</string>
    <string name="celltx_subcategoryname">celltx_SubCategoryName</string>
    <string name="celltx_bankaccount">celltx_BankAccount</string>
    <string name="celltx_txdescription">celltx_TxDescription</string>
    <string name="celltx_txamount">celltx_TxAmount</string>
    <string name="celltx_comments">celltx_Comments</string>
    <string name="celltx_txbalance">celltx_TxBalance</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="category_name">Category Name</string>
    <string name="name">Name</string>
    <string name="planned_type">Planned Type</string>
    <string name="planned">Planned</string>
    <string name="planned_configuration">**Planned Configuration**</string>
    <string name="start">Start</string>
    <string name="captionCommaAndEnd">, End</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="category">Category</string>
    <string name="current_account">Current Account</string>
    <string name="cash_account">Cash Account</string>
    <string name="match_type">Match Type</string>
    <string name="match_description">Match Description</string>
    <string name="match_amount">Match Amount</string>
    <string name="monthly">Monthly</string>
    <string name="extra">Extra</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="general_savings">General Savings</string>
    <string name="long_term_savings">Long Term Savings</string>
    <string name="family_savings">Family Savings</string>
    <string name="show_planned">Show Planned</string>
    <string name="monthly_income">Monthly Income</string>
    <string name="monthly_expense">Monthly Expense</string>
    <string name="amount_left">Amount Left</string>
    <string name="extra_income">Extra Income</string>
    <string name="extra_expense">Extra Expense</string>
    <string name="extra_left">Extra Left</string>
    <string name="final_budget_balance_this_month">Final Budget Balance this month</string>
    <string name="_0_00">£0.00</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="oneoff">Oneoff</string>
    <string name="yearly">Yearly</string>
    <string name="weekly">Weekly</string>
    <string name="transactions">Transactions</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="action_maintaincategories">Maintain Categories</string>
    <string name="title_activity_common">Common Transactions</string>
    <string name="captionCommon">Common Transactions</string>
    <string name="captionLastDate">Last Date Used</string>
    <string name="captionCreateCommon">Create</string>
    <string name="Cancel">Cancel</string>
    <string name="grouped_budget">Grouped Budget</string>
    <string name="notes">Notes</string>
    <string name="database_dump">Database Dump</string>
    <string name="title_activity_account_list">account_list</string>
    <string name="accounts">Accounts</string>
    <string name="title_activity_account_item">activityAccountItem</string>
    <string name="accountDescription">Description</string>
    <string name="accountStartingBalance">Starting Balance</string>
    <string name="title_activity_planned_tx">activityPlannedTx</string>
    <string name="mauris_sagittis_non_elit">Mauris sagittis non elit</string>
    <string name="budget">Budget</string>
    <string name="account">Account</string>
    <string name="dashboard">Dashboard</string>
    <string name="starting_balance">Starting Balance</string>
    <string name="starting_balance_full">Starting Balance %1$s</string>
    <string name="final_balance_full">Final Balance %1$s</string>
    <string name="total_outstanding_line">Total %1$s, Total Spent %2$s, Total Outstanding %3$s</string>
    <string name="bt_expand">bt_expand</string>
    <string name="total_line">Total: %1$s</string>
    <string name="spent_line">Spent: %1$s</string>
    <string name="outstanding_line">Outstanding: %1$s</string>
    <string name="select_a_budget">Select a Budget</string>
    <string name="not_set">Not Set</string>
    <string name="samplebudgetyearmonth">09/2019</string>
    <string name="samplebudgetmonth">September</string>
    <string name="samplebudgetdates"><![CDATA[26/09/2019 -> 25/10/2019]]></string>
    <string name="budgetyearmonthline">%1$s</string>
    <string name="previous_month">Previous Month</string>
    <string name="mm_yyyy">mm/yyyy</string>
    <string name="next_month">Next Month</string>
    <string name="select_a_date">Select a Date</string>
    <string name="date_known">Date Known?</string>
    <string name="select_a_day">Select a Day</string>
    <string name="hidden">Hidden</string>
    <string name="unhide_all_accounts">Unhide All Accounts</string>
    <string name="celltx_full">celltx_full</string>
    <string name="cellacc_move">cellacc_move</string>
    <string name="cellacc_sortcode">cellacc_sortcode</string>
    <string name="sort_code">Sort Code</string>
    <string name="cellac_accountnumber">cellac_accountnumber</string>
    <string name="account_number">Account Number</string>
    <string name="cellacc_description">cellacc_description</string>
    <string name="textview">TextView</string>
    <string name="select_a_day_and_month">Select a Day and Month</string>
    <string name="pick_a_frequency">Pick a Frequency</string>
    <string name="pick_one_or_more_days">Pick One or More Days</string>
    <string name="sub_category_name">Sub Category Name</string>
    <string name="copy_to_new">Copy to New</string>
    <string name="auto_match_transaction">Auto Match Transaction</string>
    <string-array name="defaultbudgettypes">
        <item>Same Month Last Year</item>
        <item>Last Month</item>
        <item>Average</item>
    </string-array>
    <string-array name="SubCategoryTypes">
        <item>Monthly Expense (appears in budget)</item>
        <item>Monthly Income (appears in budget)</item>
        <item>Extra Expense (appears in budget)</item>
        <item>Extra Income (appears in budget)</item>
        <item>Unplanned Expense (appears in budget)</item>
        <item>Unplanned Income (appears in budget)</item>
        <item>Ignore Expense (does not appear in budget)</item>
        <item>Ignore Income (does not appear in budget)</item>
        <item>Annual Expense (appears in budget)</item>
        <item>Annual Income (appears in budget)</item>
    </string-array>
    <string name="title_activity_planning_variation_item">activityPlanningVariationItem</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_info">activity_info</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_help_screen">ActivityHelpScreen</string>
    <string name="title_activity_transaction">activityTransaction</string>
</resources>
