<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:id="@+id/celltx_full"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                             android:layout_marginBottom="18dp"
                                             android:background="@android:drawable/dialog_holo_light_frame">

    <TextView
        android:id="@+id/cellac_s"
        android:layout_width="50dp"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:text="@string/celltx_txseqno"
        android:textSize="8sp"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/celltx_TxAdded"
        app:layout_constraintTop_toBottomOf="@+id/celltx_TxFilename"
        tools:ignore="SmallSp"/>

    <TextView
        android:id="@+id/celltx_TxDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:text="@string/celltx_txdate"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/celltx_TxSeqNo"/>

    <TextView
        android:id="@+id/celltx_SubCategoryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="@string/celltx_subcategoryname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/celltx_TxDate"/>

    <TextView
        android:id="@+id/celltx_TxDescription"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="@string/celltx_txdescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/celltx_SubCategoryName"/>

    <TextView
        android:id="@+id/celltx_TxAmount"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="@string/celltx_txamount"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toStartOf="@+id/celltx_TxBalance"
        app:layout_constraintTop_toBottomOf="@+id/celltx_Comments"/>

    <TextView
        android:id="@+id/celltx_Comments"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:text="@string/celltx_comments"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/celltx_TxDescription"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="Last Date Used"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</android.support.constraint.ConstraintLayout>